--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
         </dependency>
 
 
+        <!-- This jar is required if mapdb is used as the data store -->
+        <dependency>
+            <groupId>org.mapdb</groupId>
+            <artifactId>mapdb</artifactId>
+            <version>1.0.6</version>
+        </dependency>
     </dependencies>
 
     <build>
