Can specify which database to use in properties file through use of BigOrderedSetFactory interface. For example, DISK_BACKUP_FILEPATH=/var/lib/urlshortener/backup.mapdb DATABASE_FACTORY_CLASSPATH=com.perry.urlshortener.persistence.BigOrderedMapDBSetFactory

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,2 +1,3 @@
 BASE_URL=http://b.io/
-DISK_BACKUP_FILEPATH=/var/lib/urlshortener/backup.txt
+DISK_BACKUP_FILEPATH=/var/lib/urlshortener/backup.mapdb
+DATABASE_FACTORY_CLASSPATH=com.perry.urlshortener.persistence.BigOrderedMapDBSetFactory
