Counter replicated across nodes

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,3 +1,5 @@
 BASE_URL=http://b.io/
 DISK_BACKUP_FILEPATH=/var/lib/urlshortener/backup.mapdb
-DATABASE_FACTORY_CLASSPATH=com.perry.urlshortener.persistence.BigOrderedMapDBSetFactory
+DATABASE_FACTORY_CLASSPATH=com.perry.urlshortener.persistence.BigOrderedReplicatedMapDBSetFactory
+REPLICATION_CLUSTER_NAME=urlshortenermap
+REPLICATION_TIMEOUT_MS=5000
